--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
+html, body {
+	margin: 0;
+	padding: 0;
+}
+
 body {
-	background: red;
+	text-align: center;
+	background-color: #EA4630;
+	/*background-image: url("christmasbackground.jpg");*/
+}
+
+#title {
+	color: #146B3A;
+	font-size: 30px;
+	font-family: 'Henny Penny', cursive;
+}
+
+#countdown {
+	overflow-x: auto;
+	margin-top: 200px;
+	font-family: arial;
+	width: 40%;
+	border-radius: 20px; 
+	padding: 10px 10px 10px 10px;
+	margin-right: auto;
+	margin-left: auto;
+	background-color: #F8B229;
+	display: block;
+	text-align: center;
+}
+
+
+table {
+	font-size: 35px;
+	display: inline;
+}
+
+td {
+	text-align: center;
+  	border: 1px solid;
+  	padding: 0.5rem;
 }
