Added background image.

--- a/style.css
+++ b/style.css
@@ -6,10 +6,15 @@ html, body {
 body {
 	text-align: center;
 	background-color: #EA4630;
-	/*background-image: url("christmasbackground.jpg");*/
+	background-image: url("christmasbackground.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
 }
 
 #title {
+	margin-top: 150px;
 	color: white;
 	font-size: 40px;
 	font-family: 'Grandstander', cursive;
@@ -20,11 +25,11 @@ body {
 	width: 60%;
 	margin-right: auto;
 	margin-left: auto;
-	border-radius: 30px;
 	color: white;
 	font-family: 'Grandstander', cursive;
 	text-shadow: 2px 2px black;
 	font-size: 60px;
+
 	display: grid;
 	grid-template-columns: auto auto auto auto;
 	grid-auto-rows: auto;
