--- a/style.css
+++ b/style.css
@@ -18,20 +18,21 @@ body {
 #title {
 	margin-top: 150px;
 	font-size: 40px;
+	line-height: 150%;
 	text-shadow: 4px 4px 2px black;
 }
 
 #countdown {
-	width: 60%;
+	width: 80%;
 	margin-right: auto;
 	margin-left: auto;
-	text-shadow: 2px 2px black;
-	font-size: 60px;
+	text-shadow: 3px 3px black;
+	font-size: 80px;
 
 	display: grid;
 	grid-template-columns: auto auto auto auto;
 	grid-auto-rows: auto;
-	padding: 10px;
+	grid-row-gap: 0px;
 }
 
 .timeunit {
@@ -39,7 +40,23 @@ body {
 }
 
 @media (max-width: 700px) { 
+
   	body{
   		background-position: bottom left;
   	}
+
+  	#title {
+  		margin-top: 100px;
+  		font-size: 30px;
+  	}
+
+  	#countdown {
+  		width: 90%;
+  		font-size: 60px;
+  	}
+
+  	.timeunit {
+		font-size: 35px;
+	}
+
 }
